# sp1-project-template

program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: lib.rs  main.rs
program/src/m_secp256k1/: mod.rs
script/: Cargo.toml
