[workspace]
[package]
version = "0.1.0"
name = "fibonacci-program"
edition = "2021"

[dependencies]
alloy-sol-types = "0.7.2"
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.4-testnet" }
# reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", package = "reth-primitives", branch = "main" }
# reth-primitives = { git = "https://github.com/sp1-patches/reth", default-features = false, branch = "sp1-reth" }
# secp256k1 = "0.29.0"
k256 = { version = "0.13", features = ["serde"] } 
tiny-keccak = { version = "2.0", features = ["sha3"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
hex-literal = { version = "0.4.1"}
hex = { version = "0.4.3"}
sha3 = { version = "0.10.8", default-features = false }
sha2 = { version = "0.10.8", optional = true, default-features = false }

[patch.crates-io]
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }