[workspace]
[package]
version = "0.1.0"
name = "fibonacci-script"
edition = "2021"

[[bin]]
name = "prove"
path = "src/bin/prove.rs"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.4-testnet", features = [
    "plonk",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
alloy-sol-types = "0.7.2"
tiny-keccak = { version = "2.0", features = ["sha3"] }

k256 = { version = "0.13", features = ["serde"] } 
rand = "0.8"
sha3 = { version = "0.10.8", default-features = false }
sha2 = { version = "0.10.8", optional = true, default-features = false }

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.4-testnet" }
